# forge

./: .gitignore  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/: .coc-sync-marker  VERSION
.claude/commands/: sync.md
.claude/rules/: dual-track.md  forge-scope.md  learned-instincts.md  specs-first.md
cases/: README.md  case-candidates.md
cases/exemplars/: CASE-01-drift-audit.md  CASE-02-sync-merge-not-copy.md  CASE-03-spec-coverage-gate.md  CASE-04-token-ablation.md  CASE-05-session-start-command-injection.md  CASE-06-pact-todos-red-team.md  CASE-07-artifact-redteam-convergence.md  CASE-08-sdk-api-corrections.md  CASE-09-cross-feature-vacancy-bridge.md  CASE-10-learning-system-broken.md  CASE-11-pact-spec-conformance-four-gaps.md  CASE-12-human-approves-agent-performs.md  CASE-13-pub-fields-security-holes.md  CASE-14-deny-bypass-nobody-tested.md  CASE-15-rule-plus-hook.md  CASE-16-silent-drift-divergence.md  CASE-17-layer5-not-aspirational.md  CASE-18-vacancy-asymmetric-enforcement.md  CASE-19-orphans-stales-misclassified.md  CASE-20-adjacent-disconnected.md  CASE-21-orphan-audit-wrong.md  CASE-22-decision-reversal.md  CASE-23-audited-side-ahead.md  CASE-24-146kb-rules-tokens.md  CASE-25-timing-sidechannel.md
catalog/: README.md  co-codegen-staging.md  future-passes.md  routing-manifest.yaml  spec-coverage.md  teaching-sequences.md  upstream-flags.md
catalog/artifact/: SC-A-001-codify-with-explicit-not-codified.md  (+14 more)
drills/: README.md
teaching/: README.md  clusters.md  facilitation.md  outcomes.md  prereqs.md  rubrics.md
(+309 files in other folders)
