[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "forge"
version = "0.1.0"
description = "FORGE — Foundation for Orchestration, Reasoning, and Generative Engineering"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [
    { name = "Terrene Foundation" },
]
readme = "README.md"
keywords = ["cognitive-orchestration", "coc", "ai-engineering", "ai-consulting", "kailash"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Education",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Education",
]
dependencies = [
    "kailash>=2.6.0",
    "kailash-ml>=0.6.0",
    "kailash-dataflow>=1.8.0",
    "kailash-nexus>=1.9.0",
    "kailash-kaizen>=2.5.0",
    "kaizen-agents>=0.7.0",
    "kailash-pact>=0.8.0",
    "kailash-align>=0.3.1",
    "polars>=1.0",
    "python-dotenv>=1.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100
